--- a/10-12-program.html
+++ b/10-12-program.html
@@ -3,24 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Discover the 10-12 program at Philo Academy, preparing students for higher education through classical studies in the Twin Cities.">
-    <meta name="keywords" content="Philo Academy, 10-12 program, classical education, Twin Cities">
-    <meta name="author" content="Philo Academy">
-    <title>Philo Academy | 10-12 Program</title>
+    <meta name="description" content="Explore the 10-12 curriculum at Philo Classical Academy, organized by subject.">
+    <meta name="keywords" content="Philo Classical Academy, 10-12 curriculum, classical education, Twin Cities">
+    <meta name="author" content="Philo Classical Academy">
+    <title>Philo Classical Academy | 10-12 Program</title>
+    <link rel="icon" type="image/png" href="favicon-32x32.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-color: rgb(75, 0, 130);
-            --accent-color: rgb(252, 194, 0);
+            --primary-color: rgb(85, 23, 147);
+            --accent-color: rgb(238, 186, 43);
             --tertiary-color: rgb(255, 255, 255);
+            --text-color: #333;
+            --background-color: #f5f5f5;
         }
         body {
             font-family: 'Roboto', sans-serif;
-            color: #333;
-            background-color: #f5f5f5;
+            color: var(--text-color);
+            background-color: var(--background-color);
+            line-height: 1.6;
         }
-        h1, h2, h3 {
+        h1, h2, h3, h4 {
             font-family: 'Cinzel', serif;
             color: var(--primary-color);
         }
@@ -30,14 +34,14 @@
         .banner {
             background-color: var(--primary-color);
             color: var(--accent-color);
-            padding: 2rem 0;
+            padding: 1.5rem 0;
             position: relative;
         }
         .sub-banner {
             background-color: var(--accent-color);
             position: relative;
             z-index: 10;
-            padding: 1rem 0;
+            padding: 0.75rem 0;
         }
         .divider {
             background-color: var(--tertiary-color);
@@ -48,14 +52,11 @@
             height: 2px;
         }
         .motto {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Cinzel', serif;
             font-style: italic;
-            font-size: 1rem;
+            font-size: 0.875rem;
             font-weight: 400;
             color: var(--tertiary-color);
-        }
-        .dropdown:hover .dropdown-menu {
-            display: block;
         }
         .dropdown-menu {
             display: none;
@@ -64,34 +65,59 @@
             border-radius: 4px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
+        @media (min-width: 768px) {
+            .dropdown:hover .dropdown-menu,
+            .dropdown:focus-within .dropdown-menu {
+                display: block;
+            }
+        }
         .dropdown-menu a {
             font-family: 'Cinzel', serif;
-            font-size: 0.9rem;
+            font-size: 0.875rem;
             color: var(--tertiary-color);
             padding: 0.5rem 1rem;
             display: block;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
-        .dropdown-menu a:hover {
+        .dropdown-menu a:hover,
+        .dropdown-menu a:focus {
             background-color: var(--accent-color);
             color: var(--primary-color);
         }
         .footer {
             background-color: var(--primary-color);
             color: var(--accent-color);
-            padding: 2rem 0;
+            padding: 1.5rem 0;
+            text-align: center;
         }
         .logo {
-            width: 80px;
-            height: 80px;
+            width: 60px;
+            height: auto;
+            margin-right: 1rem;
+            margin-bottom: 0.5rem;
+            object-fit: contain;
+            transition: transform 0.3s ease;
+        }
+        .logo:hover {
+            transform: scale(1.05);
+        }
+        .text-container {
+            display: inline-block;
+        }
+        .banner .text-container h1 {
+            font-family: 'Cinzel', 'Times New Roman', serif !important;
+            font-weight: 700;
+            font-size: 1.75rem;
         }
         .nav-link {
             font-family: 'Cinzel', serif;
-            font-size: 1rem;
+            font-size: 0.875rem;
             font-weight: 700;
             color: var(--primary-color);
             transition: color 0.3s ease;
         }
-        .nav-link:hover {
+        .nav-link:hover,
+        .nav-link:focus {
             color: var(--tertiary-color);
         }
         .search-bar {
@@ -99,108 +125,235 @@
             border: 1px solid var(--accent-color);
             border-radius: 4px;
             padding: 0.25rem 0.5rem;
-            width: 100px;
+            width: 80px;
             font-family: 'Roboto', sans-serif;
-            font-size: 0.8rem;
+            font-size: 0.75rem;
+            transition: border-color 0.3s ease, width 0.3s ease;
         }
         .search-bar:focus {
             outline: none;
             border-color: var(--primary-color);
+            width: 120px;
         }
         .search-button {
             background-color: var(--accent-color);
             color: var(--primary-color);
-            padding: 0.25rem 0.6rem;
+            padding: 0.25rem 0.5rem;
             border-radius: 4px;
             font-family: 'Cinzel', serif;
-            font-size: 0.8rem;
+            font-size: 0.75rem;
             font-weight: 700;
             transition: background-color 0.3s ease, color 0.3s ease;
         }
-        .search-button:hover {
+        .search-button:hover,
+        .search-button:focus {
             background-color: var(--tertiary-color);
             color: var(--primary-color);
         }
         section {
-            padding: 3rem 0;
+            padding: 2rem 0;
         }
         .container {
             max-width: 1200px;
+        }
+        /* Subject Buttons */
+        .subject-grid {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 1rem;
+            margin-top: 2rem;
+        }
+        .subject-button {
+            background-color: var(--primary-color);
+            color: var(--accent-color);
+            padding: 1rem;
+            border-radius: 8px;
+            text-align: center;
+            font-family: 'Cinzel', serif;
+            font-size: 1.25rem;
+            font-weight: 700;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        .subject-button:hover,
+        .subject-button:focus {
+            background-color: var(--accent-color);
+            color: var(--primary-color);
+            transform: scale(1.05);
+        }
+        /* Responsive Adjustments */
+        @media (min-width: 768px) {
+            .banner {
+                padding: 2rem 0;
+            }
+            .banner .container {
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-between;
+            }
+            .logo {
+                width: 104px;
+                margin-right: 1rem;
+                margin-bottom: 0;
+            }
+            .banner .text-container h1 {
+                font-size: 3rem;
+            }
+            .motto {
+                font-size: 1rem;
+            }
+            .sub-banner {
+                padding: 1rem 0;
+            }
+            .nav-link {
+                font-size: 1rem;
+            }
+            .dropdown-menu {
+                min-width: 12rem;
+            }
+            .search-bar {
+                width: 100px;
+                font-size: 0.8rem;
+            }
+            .search-bar:focus {
+                width: 150px;
+            }
+            .search-button {
+                padding: 0.25rem 0.6rem;
+                font-size: 0.8rem;
+            }
+            section {
+                padding: 3rem 0;
+            }
+            section h2 {
+                font-size: 2rem;
+            }
+            .subject-grid {
+                grid-template-columns: repeat(3, 1fr);
+                gap: 1.5rem;
+            }
+            .subject-button {
+                font-size: 1.5rem;
+                padding: 1.5rem;
+            }
+            .footer {
+                padding: 2rem 0;
+            }
+            .footer p {
+                font-size: 1rem;
+            }
+        }
+        @media (min-width: 768px) {
+            .logo {
+                width: 120px;
+            }
+        }
+        @media (min-width: 1200px) {
+            .logo {
+                width: 150px;
+            }
+        }
+        @media (max-width: 767px) {
+            .banner .container {
+                flex-direction: column;
+                align-items: center;
+                gap: 0.5rem;
+            }
+            .text-container {
+                text-align: center;
+            }
+            .search-bar,
+            .search-button {
+                margin: 0 auto;
+            }
+            .dropdown-menu {
+                position: static;
+                width: 100%;
+                z-index: 1;
+            }
+        }
+        /* Accessibility */
+        :focus {
+            outline: 2px solid var(--accent-color);
+            outline-offset: 2px;
         }
     </style>
 </head>
 <body class="bg-gray-100">
     <!-- Header -->
     <header class="banner">
-        <div class="container mx-auto flex items-center justify-between px-4">
-            <div class="flex items-center">
-                <img src="philo-academy-pegasus.jpg" alt="Philo Academy Pegasus Logo" class="logo mr-4">
-                <div>
-                    <h1 class="text-5xl font-bold accent-text">Philo Academy</h1>
+        <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
+            <div class="flex flex-col items-center md:flex-row">
+                <img src="Heading.jpg?v=2" alt="Philo Classical Academy Banner" class="logo">
+                <div class="text-container">
+                    <h1 class="text-4xl md:text-5xl accent-text">Philo Classical Academy</h1>
                     <p class="motto mt-2">Virtute ad Veritatem</p>
                 </div>
             </div>
             <div class="flex items-center space-x-2">
-                <input type="text" class="search-bar" placeholder="Search...">
+                <input type="text" class="search-bar" placeholder="Search..." aria-label="Search">
                 <button class="search-button">Search</button>
             </div>
         </div>
     </header>
     <div class="divider"></div>
+    <!-- Navigation -->
     <nav class="sub-banner">
-        <div class="container mx-auto flex justify-center items-center px-4">
-            <div class="flex space-x-8">
-                <div class="dropdown relative">
-                    <a href="index.html" class="nav-link">Home</a>
-                </div>
-                <div class="dropdown relative">
-                    <a href="index.html#about" class="nav-link">About Us</a>
-                    <div class="dropdown-menu absolute top-full left-0 w-48">
-                        <a href="mission.html" target="_blank" class="block">Our Mission</a>
-                        <a href="history.html" target="_blank" class="block">History</a>
-                        <a href="faculty.html" target="_blank" class="block">Faculty</a>
-                    </div>
-                </div>
-                <div class="dropdown relative">
-                    <a href="index.html#academics" class="nav-link">Academics</a>
-                    <div class="dropdown-menu absolute top-full left-0 w-48">
-                        <a href="k5-program.html" target="_blank" class="block">K-5 Program</a>
-                        <a href="6-9-program.html" target="_blank" class="block">6-9 Program</a>
-                        <a href="10-12-program.html" target="_blank" class="block">10-12 Program</a>
-                    </div>
-                </div>
-                <div class="dropdown relative">
-                    <a href="index.html#admissions" class="nav-link">Admissions</a>
-                    <div class="dropdown-menu absolute top-full left-0 w-48">
-                        <a href="process.html" target="_blank" class="block">Process</a>
-                        <a href="tuition.html" target="_blank" class="block">Tuition</a>
-                        <a href="financial-aid.html" target="_blank" class="block">Financial Aid</a>
-                    </div>
-                </div>
-                <div class="dropdown relative">
-                    <a href="index.html#news" class="nav-link">News</a>
-                </div>
-                <div class="dropdown relative">
-                    <a href="index.html#contact" class="nav-link">Contact</a>
+        <div class="container mx-auto flex flex-col md:flex-row justify-center items-center px-4 space-y-4 md:space-y-0 md:space-x-8">
+            <a href="index.html" class="nav-link">Home</a>
+            <div class="dropdown relative">
+                <a href="index.html#about" class="nav-link">About Us</a>
+                <div class="dropdown-menu hidden">
+                    <a href="mission.html" target="_blank" class="block">Our Mission</a>
+                    <a href="history.html" target="_blank" class="block">History</a>
+                    <a href="faculty.html" target="_blank" class="block">Faculty/Staff</a>
                 </div>
             </div>
+            <div class="dropdown relative">
+                <a href="index.html#academics" class="nav-link">Academics</a>
+                <div class="dropdown-menu hidden">
+                    <a href="k5-program.html" target="_blank" class="block">K-5 Program</a>
+                    <a href="6-9-program.html" target="_blank" class="block">6-9 Program</a>
+                    <a href="10-12-program.html" target="_blank" class="block">10-12 Program</a>
+                </div>
+            </div>
+            <div class="dropdown relative">
+                <a href="index.html#admissions" class="nav-link">Admissions</a>
+                <div class="dropdown-menu hidden">
+                    <a href="process.html" target="_blank" class="block">Process</a>
+                    <a href="tuition.html" target="_blank" class="block">Tuition</a>
+                    <a href="financial-aid.html" target="_blank" class="block">Financial Aid</a>
+                </div>
+            </div>
+            <a href="index.html#news" class="nav-link">News</a>
+            <a href="index.html#contact" class="nav-link">Contact</a>
         </div>
     </nav>
 
     <!-- Main Content -->
     <main>
-        <section class="container mx-auto">
-            <h2 class="text-3xl font-bold text-center mb-8">10-12 Program</h2>
-            <p class="text-lg mb-4">The 10-12 program at Philo Academy prepares students for higher education and a life of wisdom through advanced classical studies. Students engage deeply with the great books, reading works such as *The Republic* by Plato, *The Divine Comedy* by Dante, and *To Kill a Mockingbird* by Harper Lee, in rigorous seminar discussions.</p>
-            <p class="text-lg mb-4">Our curriculum includes advanced Latin and Greek, philosophy, advanced mathematics, and the sciences, ensuring a comprehensive education. Students continue their training in traditional Western martial arts, honing discipline, leadership, and physical prowess through historical combat techniques.</p>
-            <p class="text-lg">We also focus on preparing students for college and beyond, offering guidance on university applications and fostering independent research skills. The 10-12 program culminates in a capstone project where students present a thesis on a classical text, demonstrating their mastery of critical thinking and scholarship.</p>
+        <section class="container mx-auto px-4">
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-6">10-12 Program Curriculum</h2>
+            <p class="text-lg md:text-xl text-center mb-8">Explore the 10-12 curriculum at Philo Classical Academy, organized by subject. Select a subject below to learn more about our approach to classical education.</p>
+
+            <!-- Subject Buttons -->
+            <div class="subject-grid">
+                <a href="literature10-12.html" class="subject-button">Literature</a>
+                <a href="math10-12.html" class="subject-button">Math</a>
+                <a href="humanities10-12.html" class="subject-button">Humanities</a>
+                <a href="science10-12.html" class="subject-button">Science</a>
+                <a href="physical-education10-12.html" class="subject-button">Physical Education</a>
+                <a href="music10-12.html" class="subject-button">Music</a>
+                <a href="art10-12.html" class="subject-button">Art</a>
+            </div>
         </section>
     </main>
 
     <!-- Footer -->
     <div class="footer-divider"></div>
-    <footer class="footer text-center">
-        <p>Philo Academy | 608-799-7686 | info@philoacademy.org</p>
+    <footer class="footer">
+        <p>Philo Classical Academy | 608-799-7686 | info@philoacademy.org</p>
         <p>Website: philoacademy.org</p>
-        <p>© 2025 Philo Academy. All rights reserved.</p>
+        <p>© 2025 Philo Classical Academy. All rights reserved.</p>
     </footer>
+</body>
+</html>
