--- a/literature10-12.html
+++ b/literature10-12.html
@@ -328,7 +328,7 @@
 
             <!-- 10th Grade -->
             <div class="grade-section">
-                <h3>10th Grade</h3>
+                <h3>10th Grade - The British Novel</h3>
                 <ul>
                     <li><strong>A Tale of Two Cities</strong> – Dickens’ historical novel of sacrifice and revolution in England and France.</li>
                     <li><strong>Wuthering Heights</strong> – Brontë’s gothic tale of passion and revenge on the Yorkshire moors.</li>
@@ -342,7 +342,7 @@
 
             <!-- 11th Grade -->
             <div class="grade-section">
-                <h3>11th Grade</h3>
+                <h3>11th Grade - Literature of Europe</h3>
                 <ul>
                     <li><strong>Beowulf</strong> – An epic of heroism and monsters in ancient Scandinavia.</li>
                     <li><strong>The Song of Roland</strong> – A medieval epic of loyalty and battle in Charlemagne’s era.</li>
@@ -358,7 +358,7 @@
 
             <!-- 12th Grade -->
             <div class="grade-section">
-                <h3>12th Grade</h3>
+                <h3>12th Grade - Great Books of the Western Cannon</h3>
                 <ul>
                     <li><strong>The Aeneid</strong> – Virgil’s epic of Aeneas’ journey and the founding of Rome.</li>
                     <li><strong>The Divine Comedy: Inferno</strong> – Dante’s descent through Hell, exploring sin and morality.</li>
